testsuite/tests/unlifted-datatypes/should_fail/UnlDataInvalidResKind1.stderr

UnlDataInvalidResKind1.hs:9:1: error:
    • Data type has non-'BoxedRep return kind ‘TYPE 'IntRep’
    • In the data declaration for ‘T’
